--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="646f8f">  <td>24/04/13 13:06:43</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.Register@4ddced80]">&gt;&gt;OpenBrowser</td> 
+<tr bgcolor="646f8f">  <td>24/04/30 20:08:08</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@4ddced80]">&gt;&gt;OpenBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="646f8f">  <td>24/04/13 13:06:47</td>   <td>3535</td> <td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.Register@4ddced80]">&lt;&lt;CloseBrowser</td> 
+<tr bgcolor="646f8f">  <td>24/04/30 20:08:34</td>   <td>25262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@4ddced80]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="646f8f">  <td>24/04/30 20:08:14</td>   <td>5347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@4ddced80]">&gt;&gt;Login</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="646f8f">  <td>24/04/30 20:08:36</td>   <td>27635</td> <td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@4ddced80]">&lt;&lt;CloseBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="646f8f">  <td>24/04/13 13:06:47</td>   <td>3513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.Register@4ddced80]">&gt;&gt;Login</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="646f8f">  <td>24/04/13 13:06:47</td>   <td>3531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.Register@4ddced80]">&lt;&lt;Logout</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="8ff1a8">  <td>24/04/13 13:06:47</td>   <td>3514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.RegisterName()[pri:0, instance:com.EmpMonitor.test.Register@4ddced80]">RegisterName</td> 
+<tr bgcolor="8ff1a8">  <td>24/04/30 20:08:19</td>   <td>10103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTimesheet.timesheet()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@4ddced80]">timesheet</td> 
   <td>main@498931366</td>   <td></td> </tr>
 </table>
