--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="646f8f">  <td>24/04/13 13:18:55</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.Register@4ddced80]">&lt;&lt;CloseBrowser</td> 
+<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">&lt;&lt;CloseBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="646f8f">  <td>24/04/13 13:18:32</td>   <td>-23083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.Register@4ddced80]">&gt;&gt;Login</td> 
+<tr bgcolor="77e97b">  <td>24/04/30 20:12:06</td>   <td>-97</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmpAttendance.EmployeAttendance()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@1184ab05]">EmployeAttendance</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>-64</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@3aefe5e5]">&gt;&gt;Login</td> 
 <td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="646f8f">  <td>24/04/13 13:18:36</td>   <td>-19215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.Register@4ddced80]">&lt;&lt;Logout</td> 
+<tr bgcolor="6cff7a">  <td>24/04/30 20:10:54</td>   <td>-72744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">&gt;&gt;Login</td> 
 <td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="646f8f">  <td>24/04/13 13:18:29</td>   <td>-26305</td> <td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.Register@4ddced80]">&gt;&gt;OpenBrowser</td> 
+<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>-101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@1184ab05]">&gt;&gt;Login</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="6cff7a">  <td>24/04/30 20:11:56</td>   <td>-10470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@3aefe5e5]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>-66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@1184ab05]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="6cff7a">  <td>24/04/30 20:10:50</td>   <td>-76710</td> <td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">&gt;&gt;OpenBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="8ff1a8">  <td>24/04/13 13:18:36</td>   <td>-19255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.RegisterName()[pri:0, instance:com.EmpMonitor.test.Register@4ddced80]">RegisterName</td> 
+<tr bgcolor="8ff1a8">  <td>24/04/30 20:10:58</td>   <td>-68172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.RegisterName()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">RegisterName</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="a664f2">  <td>24/04/30 20:12:06</td>   <td>-52</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTimesheet.timesheet()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@3aefe5e5]">timesheet</td> 
   <td>main@498931366</td>   <td></td> </tr>
 </table>
