--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.EmpMonitor.genrics.BasePropCls.CloseBrowser</td></tr>
+<tr><td>com.EmpMonitor.genrics.BasePropCls.CloseBrowser</td></tr>
+<tr><td>com.EmpMonitor.genrics.BasePropCls.OpenBrowser</td></tr>
+<tr><td>com.EmpMonitor.genrics.BasePropCls.OpenBrowser</td></tr>
 </table>
