--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,26 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="77e97b">  <td>24/04/30 20:12:06</td>   <td>-97</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmpAttendance.EmployeAttendance()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@1184ab05]">EmployeAttendance</td> 
+<tr bgcolor="8ff1a8">  <td>24/05/01 14:34:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTimeClaming.ClaimTest()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@4690b489]">ClaimTest</td> 
   <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>-64</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@3aefe5e5]">&gt;&gt;Login</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:10:54</td>   <td>-72744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">&gt;&gt;Login</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>-101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@1184ab05]">&gt;&gt;Login</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:11:56</td>   <td>-10470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">&lt;&lt;Logout</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@3aefe5e5]">&lt;&lt;Logout</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>-66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@1184ab05]">&lt;&lt;Logout</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:10:50</td>   <td>-76710</td> <td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">&gt;&gt;OpenBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="8ff1a8">  <td>24/04/30 20:10:58</td>   <td>-68172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.RegisterName()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">RegisterName</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 14:36:29</td>   <td>92095</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.Register@2f7c2f4f]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:37</td>   <td>40161</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:56</td>   <td>59269</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:15</td>   <td>17555</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@4690b489]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="77e97b">  <td>24/05/01 14:35:21</td>   <td>24438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmpAttendance.EmployeAttendance()[pri:2, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">EmployeAttendance</td> 
   <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="a664f2">  <td>24/04/30 20:12:06</td>   <td>-52</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTimesheet.timesheet()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@3aefe5e5]">timesheet</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:18</td>   <td>20626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">&gt;&gt;Login</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:40</td>   <td>42986</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">&gt;&gt;Login</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:59</td>   <td>62130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.Register@2f7c2f4f]">&gt;&gt;Login</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:34:52</td>   <td>-5025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@4690b489]">&gt;&gt;Login</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:34:57</td>   <td>100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@4690b489]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:35</td>   <td>37845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:54</td>   <td>56999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:36:26</td>   <td>89361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.Register@2f7c2f4f]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:15</td>   <td>17916</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">&gt;&gt;OpenBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:37</td>   <td>40463</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">&gt;&gt;OpenBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:57</td>   <td>59536</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.Register@2f7c2f4f]">&gt;&gt;OpenBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:34:48</td>   <td>-8767</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@4690b489]">&gt;&gt;OpenBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="9fcf7f">  <td>24/05/01 14:36:03</td>   <td>66002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.RegisterName()[pri:1, instance:com.EmpMonitor.test.Register@2f7c2f4f]">RegisterName</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="a664f2">  <td>24/05/01 14:35:44</td>   <td>47289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTimesheet.timesheet()[pri:3, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">timesheet</td> 
   <td>main@498931366</td>   <td></td> </tr>
 </table>
