--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,26 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:10:50</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">&gt;&gt;OpenBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="77e97b">  <td>24/04/30 20:12:06</td>   <td>76613</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmpAttendance.EmployeAttendance()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@1184ab05]">EmployeAttendance</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 14:34:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@4690b489]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:35</td>   <td>37745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:18</td>   <td>20526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">&gt;&gt;Login</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="a664f2">  <td>24/05/01 14:35:44</td>   <td>47189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTimesheet.timesheet()[pri:3, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">timesheet</td> 
   <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:11:56</td>   <td>66240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">&lt;&lt;Logout</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="8ff1a8">  <td>24/04/30 20:10:58</td>   <td>8538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.RegisterName()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">RegisterName</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 14:36:29</td>   <td>91995</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.Register@2f7c2f4f]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="9fcf7f">  <td>24/05/01 14:36:03</td>   <td>65902</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.RegisterName()[pri:1, instance:com.EmpMonitor.test.Register@2f7c2f4f]">RegisterName</td> 
   <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>76646</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@3aefe5e5]">&gt;&gt;Login</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:15</td>   <td>17816</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">&gt;&gt;OpenBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:40</td>   <td>42886</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">&gt;&gt;Login</td> 
 <td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:10:54</td>   <td>3966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">&gt;&gt;Login</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>76710</td> <td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.Register@4386f16]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>76692</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@3aefe5e5]">&lt;&lt;Logout</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>76609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@1184ab05]">&gt;&gt;Login</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="a664f2">  <td>24/04/30 20:12:06</td>   <td>76658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTimesheet.timesheet()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@3aefe5e5]">timesheet</td> 
+<tr bgcolor="8ff1a8">  <td>24/05/01 14:34:57</td>   <td>-100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTimeClaming.ClaimTest()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@4690b489]">ClaimTest</td> 
   <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>24/04/30 20:12:06</td>   <td>76644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@1184ab05]">&lt;&lt;Logout</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:37</td>   <td>40363</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">&gt;&gt;OpenBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:37</td>   <td>40061</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:59</td>   <td>62030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.Register@2f7c2f4f]">&gt;&gt;Login</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:34:52</td>   <td>-5125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@4690b489]">&gt;&gt;Login</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="77e97b">  <td>24/05/01 14:35:21</td>   <td>24338</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmpAttendance.EmployeAttendance()[pri:2, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">EmployeAttendance</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:56</td>   <td>59169</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:57</td>   <td>59436</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.Register@2f7c2f4f]">&gt;&gt;OpenBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:54</td>   <td>56899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:34:48</td>   <td>-8867</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@4690b489]">&gt;&gt;OpenBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:35:15</td>   <td>17455</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@4690b489]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b770fc">  <td>24/05/01 14:36:26</td>   <td>89261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.Register@2f7c2f4f]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
 </table>
